# procmon-rust

./: .gitignore  Cargo.toml  Makefile.toml  events.db
ProcmonUI/: ProcmonUI.sln
ProcmonUI/ProcmonUI/: App.xaml  App.xaml.cs  DataService.cs  Event.cs  EventViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  ProcmonUI.csproj
crates/kmum-common/: Cargo.toml
crates/kmum-common/src/: krnmsg.rs  lib.rs  process.rs  serializable_ntstring.rs
crates/kmum-common/src/event/: events.rs  mod.rs  operation.rs  stack.rs
crates/procmon/: Cargo.toml  sandbox.inx
crates/procmon-client/: Cargo.toml
crates/procmon-client/src/: app.rs  app_ui.rs  client_runtime.rs  event_reader.rs  events_storage.rs  fake_communication.rs  main.rs  notifier.rs  old_main2.rs  process_cache.rs
crates/procmon-client/src/communication/: event_communication.rs  fake_communication.rs  mod.rs
crates/procmon-client/src/container/: mod.rs
crates/procmon-client/src/event_storage/: event_storage.rs  mod.rs
crates/procmon-client/src/filters/: mod.rs
crates/procmon-client/src/process/: mod.rs  process_manager.rs
crates/procmon-client/src/services/: event_filter_service.rs  event_indexer_service.rs  event_storage_service.rs  indexer_controller.rs  mod.rs
crates/procmon-core/: Cargo.toml
crates/procmon-core/src/: lib.rs
crates/procmon-core/src/communication/: communication.rs  dispatcher.rs  driver_communication.rs  mod.rs  parsed.rs  processor.rs  raw_communication.rs
crates/procmon-core/src/runtime/: mod.rs
crates/procmon-core/src/win/: constatns.rs  event.rs  mod.rs  overlapped.rs
crates/procmon-csharp/: Cargo.toml  build.rs
crates/procmon-csharp/bindings/dotnet/: procmon.cs
crates/procmon-csharp/src/: lib.rs  procmon.udl
crates/procmon-tester/: Cargo.toml
crates/procmon-tester/src/: main.rs
crates/procmon/scripts/: install.cmd  start.cmd  stop.cmd  uninstall.cmd
crates/procmon/src/: global.rs  lib.rs  panic.rs
crates/procmon/src/communication/: async_messaging.rs  message_buffer.rs  messaging.rs  mod.rs  port.rs
crates/procmon/src/imports/: mod.rs
crates/procmon/src/minifilter/: mod.rs  preop.rs
crates/procmon/src/pscollector/: cache.rs  collection.rs  mod.rs  old.rs  proc_info_factory.rs
