[package]
name = "procmon-client"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
] }

chrono = "0.4"

procmon-core.workspace = true
nt-string.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.8"
slab = "0.4"
rayon = "1.10.0"
flume = "0.11.1"
dashmap = "6.1.0"

kmum-common = { path = "../kmum-common", version = "*" }
clap = { version = "4.5.32", features = ["derive"] }
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = "0.31.1"
